{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "485da1e9-0a28-4e94-a14d-fa15cf967029",
            "actions": [
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "e7fb5328-ffad-4fcc-8746-ec6d2d0ed4e8",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "f921e8fd-69bc-403c-a26a-2a329cf90569",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throw",
                    "type": "Button",
                    "id": "dd7d5ca6-e9f9-453a-8bed-72349e1b0bd7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ReturnAxe",
                    "type": "Button",
                    "id": "203a2b2f-3c34-4d37-9d35-74e9cea44043",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9cd06707-4852-46a3-911a-8a791c6fad3a",
                    "path": "<Gamepad>/leftStick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WS",
                    "id": "ad511767-93b0-4b85-a63d-712d56f26e6f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "dd5d0e87-54d5-4f12-8907-12fda64cb501",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "650f057c-30fd-46aa-8fde-7415b6148225",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "792dbcd0-c6a2-4a70-a4f1-dd625c92e00e",
                    "path": "<Gamepad>/leftStick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "89c06242-2cbb-40e4-bc4f-207f1cca9c27",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "1666f6f4-33a3-4ef5-a2cd-41a4203fe7e9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "53d50458-6e55-44a1-8bce-61f24845259a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "dd84bdc9-82a9-4a47-be83-ac97a4dc9454",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f66efdc-4777-40c6-88e1-0e99f244cdd0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4208bef3-70ae-4c53-86f5-518ac9aff155",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnAxe",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2b6d761-a119-4839-b306-74e303fa2d83",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReturnAxe",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}